# migration_mongodb

./: .gitignore  Diaz_Joaquim_4_presentation_122024.pptx  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml
mongo/mongo_init/: create_users.js  init_mongo.js
python-csv/: data_processing.py  dockerfile  main.py  mongo_insert.py  requirements.txt
python-csv/tests_python/: test_main.py
